refactor(components): auto-select supplier's status to Active

--- a/Components/SupplierDialog/SupplierDialogCard.axaml
+++ b/Components/SupplierDialog/SupplierDialogCard.axaml
@@ -173,7 +173,7 @@
                             <StackPanel Grid.Row="5">
                                 <ComboBox
                                     shadui:ControlAssist.Label="Status"
-                                    PlaceholderText="Select status"
+                                    IsEnabled="{CompiledBinding IsStatusEnabled}"
                                     ItemsSource="{CompiledBinding StatusFilterItems}"
                                     SelectedItem="{CompiledBinding Status, Mode=TwoWay}">
                                 </ComboBox>
