--- a/Views/SupplierManagementView.axaml
+++ b/Views/SupplierManagementView.axaml
@@ -31,6 +31,8 @@
         <converters:IntToBoolConverter x:Key="IntToBoolConverter" />
         <converters:IntToInverseBoolConverter x:Key="IntToInverseBoolConverter" />
         <converters:DateToStringConverter x:Key="DateToStringConverter" />
+        <converters:StatusAndCanDeleteSelectedConverter x:Key="StatusAndCanDeleteSelectedConverter"/>
+        <converters:StatusAndSelectedToDeleteEnabledConverter x:Key="StatusAndSelectedToDeleteEnabledConverter"/>
     </UserControl.Resources>
 
     <DockPanel LastChildFill="True">
@@ -194,7 +196,7 @@
                                         <DataGridTextColumn
                                             IsReadOnly="True"
                                             Width="Auto"
-                                            MinWidth="160"
+                                            MaxWidth="140"
                                             Header="Products"
                                             Binding="{CompiledBinding Products}" />
 
@@ -273,13 +275,31 @@
                                                                 Foreground="{DynamicResource DestructiveColor}"
                                                                 Command="{CompiledBinding $parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).ShowSingleItemDeletionDialogCommand, FallbackValue={x:Null}}"
                                                                 CommandParameter="{CompiledBinding}"
-                                                                IsVisible="{CompiledBinding $parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).SelectedCount, Converter={StaticResource IntToInverseBoolConverter}, FallbackValue={x:Null}}" />
+                                                                IsVisible="{CompiledBinding $parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).SelectedCount, Converter={StaticResource IntToInverseBoolConverter}, FallbackValue={x:Null}}">
+                                                                <MenuItem.IsEnabled>
+                                                                    <MultiBinding Converter="{StaticResource StatusAndSelectedToDeleteEnabledConverter}">
+                                                                        <!-- 1) status of the row where the menu is opened -->
+                                                                        <Binding Path="Status" />
+                                                                        <!-- 2) currently selected supplier's status from the viewmodel (may be null) -->
+                                                                        <Binding Path="$parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).SelectedSupplier.Status" FallbackValue="{x:Null}" />
+                                                                    </MultiBinding>
+                                                                </MenuItem.IsEnabled>
+                                                            </MenuItem>
                                                             <MenuItem
                                                                 Header="Delete Selected"
                                                                 Foreground="{DynamicResource DestructiveColor}"
                                                                 Command="{CompiledBinding $parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).ShowMultipleItemDeletionDialogCommand, FallbackValue={x:Null}}"
                                                                 CommandParameter="{CompiledBinding}"
-                                                                IsVisible="{CompiledBinding $parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).SelectedCount, Converter={StaticResource IntToBoolConverter}, FallbackValue={x:Null}}" />
+                                                                IsVisible="{CompiledBinding $parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).SelectedCount, Converter={StaticResource IntToBoolConverter}, FallbackValue={x:Null}}">
+                                                                <MenuItem.IsEnabled>
+                                                                    <MultiBinding Converter="{StaticResource StatusAndCanDeleteSelectedConverter}">
+                                                                        <!-- current row's Status -->
+                                                                        <Binding Path="Status" />
+                                                                        <!-- view-model global flag -->
+                                                                        <Binding Path="$parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).CanDeleteSelectedSuppliers" FallbackValue="{x:Null}"/>
+                                                                    </MultiBinding>
+                                                                </MenuItem.IsEnabled>
+                                                            </MenuItem>
                                                         </MenuItem>
                                                     </Menu>
                                                 </DataTemplate>
@@ -515,13 +535,31 @@
                                                                 Foreground="{DynamicResource DestructiveColor}"
                                                                 Command="{CompiledBinding $parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).ShowSingleItemDeletionDialogCommand, FallbackValue={x:Null}}"
                                                                 CommandParameter="{CompiledBinding}"
-                                                                IsVisible="{CompiledBinding $parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).SelectedCount, Converter={StaticResource IntToInverseBoolConverter}, FallbackValue={x:Null}}" />
+                                                                IsVisible="{CompiledBinding $parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).SelectedCount, Converter={StaticResource IntToInverseBoolConverter}, FallbackValue={x:Null}}">
+                                                                <MenuItem.IsEnabled>
+                                                                    <MultiBinding Converter="{StaticResource StatusAndSelectedToDeleteEnabledConverter}">
+                                                                        <!-- 1) status of the row where the menu is opened -->
+                                                                        <Binding Path="Status" />
+                                                                        <!-- 2) currently selected supplier's status from the viewmodel (may be null) -->
+                                                                        <Binding Path="$parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).SelectedSupplier.Status" FallbackValue="{x:Null}" />
+                                                                    </MultiBinding>
+                                                                </MenuItem.IsEnabled>
+                                                            </MenuItem>
                                                             <MenuItem
                                                                 Header="Delete Selected"
                                                                 Foreground="{DynamicResource DestructiveColor}"
                                                                 Command="{CompiledBinding $parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).ShowMultipleItemDeletionDialogCommand, FallbackValue={x:Null}}"
                                                                 CommandParameter="{CompiledBinding}"
-                                                                IsVisible="{CompiledBinding $parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).SelectedCount, Converter={StaticResource IntToBoolConverter}, FallbackValue={x:Null}}" />
+                                                                IsVisible="{CompiledBinding $parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).SelectedCount, Converter={StaticResource IntToBoolConverter}, FallbackValue={x:Null}}">
+                                                                <MenuItem.IsEnabled>
+                                                                    <MultiBinding Converter="{StaticResource StatusAndCanDeleteSelectedConverter}">
+                                                                        <!-- current row's Status -->
+                                                                        <Binding Path="Status" />
+                                                                        <!-- view-model global flag -->
+                                                                        <Binding Path="$parent[DataGrid].((viewModels:SupplierManagementViewModel)DataContext).CanDeleteSelectedSuppliers" FallbackValue="{x:Null}"/>
+                                                                    </MultiBinding>
+                                                                </MenuItem.IsEnabled>
+                                                            </MenuItem>
                                                         </MenuItem>
                                                     </Menu>
                                                 </DataTemplate>
